stat analysis on setup vs wave params

--- a/Mark_Meetings/2025-12-03_meeting.ipynb
+++ b/Mark_Meetings/2025-12-03_meeting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44c03952",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7343038b",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "88481252",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,6 @@
     "df_waves.head()\n",
     "H0_ser = pd.Series(df_waves['H0'], index=pd.to_datetime(df_waves.index)).sort_index()\n",
     "\n",
-    "# ... [Step 1 and 2 (Spectral calculations) stay the same] ...\n",
     "\n",
     "# 3. Calculate Setup from RAW data (More reliable than spectral averages)\n",
     "# Use the original high-freq dataframes where you know timestamps are correct\n",
@@ -794,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9aa1581f",
    "metadata": {},
    "outputs": [
@@ -931,7 +930,7 @@
     "cbar = fig.colorbar(sc, ax=[ax1, ax2], fraction=0.02, pad=0.04)\n",
     "cbar.set_label(\"Tide (m)\", rotation=270, labelpad=15)\n",
     "\n",
-    "plt.tight_layout()\n",
+    "#plt.tight_layout()\n",
     "plt.show()"
    ]
   },
