--- a/Mark_Meetings/2025-12-24.ipynb
+++ b/Mark_Meetings/2025-12-24.ipynb
@@ -29,7 +29,7 @@
    "id": "844847cb",
    "metadata": {},
    "source": [
-    "### Holiday Break\n",
+    "# Holiday Break\n",
     "\n",
     "Just had a quick meeting with MM. After seeing the monismith vs stockdon comparison, he suggested I compare the monismith coefficients in the way the Julia did it in Fiedler et al (2020) where one coeff is on the x and the other is on the y axis. I think then the line is RMSE but unsure. \n",
     "\n",
