questioning 3 panel plot

--- a/2026_Mark_Meetings/2026-01-14.ipynb
+++ b/2026_Mark_Meetings/2026-01-14.ipynb
@@ -663,7 +663,7 @@
     "# --- PANEL 2: Peak Period (The \"Modulator\") ---\n",
     "ax2.plot(swell_event.index, swell_event['transfer_efficiency'], color='royalblue', lw=1.2)\n",
     "ax2.set_ylabel('$T_p$ [s]')\n",
-    "ax2.set_title('B) Offshore Peak Period', loc='left', fontweight='bold')\n",
+    "ax2.set_title('B) Transfer Efficiency ($)', loc='left', fontweight='bold')\n",
     "\n",
     "# --- PANEL 3: Wave Height (The \"Engine\") ---\n",
     "ax3.fill_between(swell_event.index, swell_event['H0'], color='slategray', alpha=0.15)\n",
