added loadPressureData script

--- a/2026_Mark_Meetings/2026-01-14.ipynb
+++ b/2026_Mark_Meetings/2026-01-14.ipynb
@@ -3569,22 +3569,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8343df83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next = pd.read_clipboard    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "db253e24",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "625.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "7500/12"
+    "Post meeting with mark:\n",
+    "\n",
+    "MM thought that the 'efficiency' analysis by using H_ig/H0 was clever. The question now becomes. Is it the bound IG wave or the sea/swell that has the most effect on the setup. To look at this, he suggested changing into an IG wave time scale. In this case I would perform a complex demodulation on the swell band. in theory, the offshore swell and the IG should be 180 deg out of phase. Which one actually has the most influence on setup?\n",
+    "\n",
+    "can you tell me your thoughts on this idea? including any rebuttals or conflicting ideas"
    ]
   },
   {
